--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/video.js": "^7.3.51",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cross-env": "^7.0.3",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "typescript-cookie": "^1.0.4",
+    "video.js": "^8.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
